--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "quill": "^1.3.6",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
+    "uniqid": "^5.0.3",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
